--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.323.0",
+    "nlw-expert-notes": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sonner": "^1.4.0"
